--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "webpack-ssr",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.7.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.0",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/runtime": "^7.7.0",
-    "babel-loader": "^8.0.6",
-    "compose-middleware": "^4.0.0",
-    "concurrently": "^3.5.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "express": "^4.17.1",
-    "mini-css-extract-plugin": "^0.4.0",
-    "null-loader": "^0.1.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-hot-loader": "^4.1.3",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0",
-    "webpack": "^4.29.0",
-    "webpack-dev-middleware": "^3.1.2",
-    "webpack-dev-server": "^3.1.2",
-    "webpack-hot-middleware": "^2.22.1"
-  },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.16.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack-cli": "^3.3.10"
-  },
-  "scripts": {
-    "webpack-client": "webpack --config build/webpack.client.js",
-    "webpack-server": "webpack --config build/webpack.server.js",
-    "webpack": "concurrently \"npm:webpack-server\" \"npm:webpack-client\"",
-    "release": "cross-env NODE_ENV=production npm run build",
-    "build": "npm run webpack",
-    "start": "node build/devServer.js"
-  }
+	"name": "webpack-ssr",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"dependencies": {
+		"@babel/core": "^7.7.0",
+		"@babel/plugin-transform-runtime": "^7.6.2",
+		"@babel/preset-env": "^7.7.0",
+		"@babel/preset-react": "^7.7.0",
+		"@babel/runtime": "^7.7.0",
+		"babel-loader": "^8.0.6",
+		"compose-middleware": "^4.0.0",
+		"concurrently": "^3.5.1",
+		"cross-env": "^5.1.4",
+		"css-loader": "^0.28.11",
+		"express": "^4.17.1",
+		"mini-css-extract-plugin": "^0.4.0",
+		"null-loader": "^0.1.1",
+		"react": "^16.3.1",
+		"react-dom": "^16.3.1",
+		"react-hot-loader": "^4.1.3",
+		"react-redux": "^5.0.7",
+		"react-router": "^4.2.0",
+		"react-router-dom": "^4.2.2",
+		"redux": "^4.0.0",
+		"webpack": "^4.29.0",
+		"webpack-dev-middleware": "^3.1.2",
+		"webpack-dev-server": "^3.1.2",
+		"webpack-hot-middleware": "^2.22.1"
+	},
+	"devDependencies": {
+		"eslint-plugin-react": "^7.16.0",
+		"terser-webpack-plugin": "^2.2.1",
+		"webpack-cli": "^3.3.10"
+	},
+	"scripts": {
+		"webpack-client": "webpack --config build/webpack.client.js",
+		"webpack-server": "webpack --config build/webpack.server.js",
+		"webpack": "concurrently \"npm:webpack-server\" \"npm:webpack-client\"",
+		"release": "cross-env NODE_ENV=production npm run build",
+		"build": "rm -rf ./dist && npm run webpack",
+		"start": "node build/devServer.js"
+	},
+	"browserslist": [
+		"last 1 version",
+		"> 1%",
+		"not dead"
+	]
 }
