--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"babel-loader": "^8.0.6",
 		"compose-middleware": "^4.0.0",
 		"concurrently": "^3.5.1",
+		"core-js": "^3.4.0",
 		"cross-env": "^5.1.4",
 		"css-loader": "^0.28.11",
 		"express": "^4.17.1",
@@ -30,6 +31,8 @@
 		"webpack-hot-middleware": "^2.22.1"
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.0.3",
+		"eslint": "^6.6.0",
 		"eslint-plugin-react": "^7.16.0",
 		"terser-webpack-plugin": "^2.2.1",
 		"webpack-cli": "^3.3.10"
