--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,13 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    "indent": ["error", 2],
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
     "semi": ["error", "never"],
     "quotes": ["error", "single"],
     "no-var": "error",
