--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
 		"redux": "^4.0.0",
+		"redux-thunk": "^2.3.0",
 		"webpack": "^4.29.0",
 		"webpack-dev-middleware": "^3.1.2",
 		"webpack-dev-server": "^3.1.2",
